fix: add sort feature for list starter endpoint and delete dept endpoint
